--- a/20.时钟.html
+++ b/20.时钟.html
@@ -19,6 +19,7 @@
       border:1px dashed #666;
       margin: 100px auto;
       position: relative;
+      color: #080;
     }
     .clock ul{
       width: 200px;
