--- a/react/1.调兵.html
+++ b/react/1.调兵.html
@@ -14,7 +14,7 @@
     <div id="root"></div>
     <script type="text/babel">
     class Aoo extends React.Component{
-        constructor(props){
+        constructor(){
             super(props)
         }
         diaobing(){
