--- a/jquery/2.练习二复选框.html
+++ b/jquery/2.练习二复选框.html
@@ -47,7 +47,7 @@
 
             // $("input:checked").prop("checked",false)
             // $("input:not(:checked)").prop("checked",true)
-            $("input").removeAttr("a","b")
+            $("input").oveAttr("a","b")
             $("input").removeAttr("b","b")
             $("input:checked").attr("a","a")
             $("input:not(:checked)").attr("b","b")
